23rd Commit - Created ManagePaymentController , Updated Some Changes and Finished Payment